--- a/run-ts/.prettierrc
+++ b/run-ts/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "printWidth": 120,
+  "semi": true,
+  "trailingComma": "all",
   "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "arrowParens": "avoid"
+  "printWidth": 100,
+  "tabWidth": 2
 }
