--- a/run-ts/package.json
+++ b/run-ts/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
     "styled-components": "^5.3.5"
@@ -33,6 +34,7 @@
     "@babel/eslint-parser": "^7.5.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.0",
