--- a/run-ts/package.json
+++ b/run-ts/package.json
@@ -28,7 +28,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.5.4",
