--- a/run-ts/package.json
+++ b/run-ts/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
     "styled-components": "^5.3.5",
